--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,3 +1,60 @@
-<script>
-    location.href = "/donate";
-</script>  
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta content="" name="description" />
+    <meta content="webthemez" name="author" />
+    <script type='text/javascript' src='/dwr/engine.js'></script>
+    <script type='text/javascript' src='/dwr/interface/UserManager.js'></script>
+    <style type="text/css">
+        table{
+            border: 3px solid blueviolet;
+            border-collapse:collapse;
+            text-align: center;
+        }
+        td{
+            border: 3px solid blueviolet;
+        }
+    </style>
+    <title>围脖统计管理后台</title>
+  
+</head>
+
+<body>
+   <table>
+       <tr>
+           <td>用户名</td>
+           <td>性别</td>
+           <td>出生时间</td>
+           <td>uid</td>
+       </tr>
+       <tbody>
+           <tr>
+           <td id="name"></td>
+           <td id="sex"></td>
+           <td id="birthday"></td>
+           <td id="uid"></td>
+           </tr>
+       </tbody>
+   </table>
+   <script type="text/javascript">
+       UserManager.getAll(function (users) {
+           document.getElementById("name").innerHTML = users[0].name;
+           if(users[0].sex === true){
+               document.getElementById("sex").innerHTML = "男";
+           }
+           else {
+               document.getElementById("sex").innerHTML = "女";
+           }
+           document.getElementById("birthday").innerHTML = users[0].birthday;
+           document.getElementById("uid").innerHTML = users[0].uid;
+            console.log(users);
+       });
+
+
+   </script>
+</body>
+
+</html>
