--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,43 +6,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta content="" name="description" />
     <meta content="webthemez" name="author" />
+    <title>围脖统计管理后台</title>
     <script src='/dwr/engine.js'></script>
     <script src='/dwr/interface/UserManager.js'></script>
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/vue.min.js"></script>
+    <script src="/static/js/tools.js"></script>
     <script src="/static/js/index.js"></script>
-    <style type="text/css">
-        table{
-            border: 3px solid blueviolet;
-            border-collapse:collapse;
-            text-align: center;
-        }
-        td{
-            border: 3px solid blueviolet;
-        }
-    </style>
-    <title>围脖统计管理后台</title>
-  
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 
 <body>
-   <table>
-       <tr>
-           <td>用户名</td>
-           <td>性别</td>
-           <td>出生时间</td>
-           <td>uid</td>
-       </tr>
-       <tbody id="users">
-           <tr v-for="user in users">
-               <td>{{user.name}}</td>
-               <td>{{user.sex}}</td>
-               <td>{{user.birthday}}</td>
-               <td>{{user.uid}}</td>
-           </tr>
-       </tbody>
-   </table>
+<div class="container">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Brand</a>
+            </div>
 
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">Link</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">One more separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="navbar-form navbar-left">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Link</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">所有用户</h3>
+        </div>
+        <table class="table">
+            <tr>
+                <td>用户名</td>
+                <td>性别</td>
+                <td>出生时间</td>
+                <td>uid</td>
+            </tr>
+            <tbody id="users">
+            <tr v-for="user in users">
+                <td>{{user.name}}</td>
+                <td>{{user.sex == null ? "未知" : (user.sex ? "男" : "女")}}</td>
+                <td>{{user.birthday.format(YEAR_MONTH_DATE_FORMAT)}}</td>
+                <td>{{user.uid}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 </body>
-
 </html>
