--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -334,11 +334,11 @@
 		</div>
             <div id="page-inner">
             <div class="apple">
-                <ul id="weibos">
-                    <li v-for="weibo in weibos"><a  href="#" target="_blank">
-                        <p class="name">微博ID：{{weibo.weiboid}}</p>
-                        <p class="say">{{weibo.content}}</p>
-                        <p class="infor">发表时间：{{weibo.time.format(DATE_HOUR_MINUTE_SECOND_FORMAT)}}</p></a>
+                <ul id="shows">
+                    <li v-for="show in shows"><a  href="#" target="_blank">
+                        <p class="name">微博ID：{{show.weiboid}}</p>
+                        <p class="say">{{show.content}}</p>
+                        <p class="infor">发表时间：{{show.time.format(DATE_HOUR_MINUTE_SECOND_FORMAT)}}</p></a>
                     </li>
                 </ul>
             </div>
