--- a/src/main/webapp/morris-chart.html
+++ b/src/main/webapp/morris-chart.html
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><strong><i class="icon fa fa-plane"></i> BRILLIANT</strong></a>
+                <a class="navbar-brand" href="main.html"><strong><i class="icon fa fa-plane"></i> BRILLIANT</strong></a>
 				<div id="sideNav" href="">
 		<i class="fa fa-bars icon"></i> 
 		</div>
@@ -248,7 +248,7 @@
                 <ul class="nav" id="main-menu">
 
                     <li>
-                        <a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a>
+                        <a href="main.html"><i class="fa fa-dashboard"></i> Dashboard</a>
                     </li>
                     <li>
                         <a href="ui-elements.html"><i class="fa fa-desktop"></i> UI Elements</a>
