--- a/src/main/webapp/ui-elements.html
+++ b/src/main/webapp/ui-elements.html
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><strong><i class="icon fa fa-plane"></i> 微博后台管理系统</strong></a>
+                <a class="navbar-brand" href="main.html"><strong><i class="icon fa fa-plane"></i> 微博后台管理系统</strong></a>
 				<div id="sideNav" href="">
 		<i class="fa fa-bars icon"></i> 
 		</div>
@@ -246,7 +246,7 @@
                 <ul class="nav" id="main-menu">
 
                     <li>
-                        <a href="index.html"><i class="fa fa-dashboard"></i> 仪表板</a>
+                        <a href="main.html"><i class="fa fa-dashboard"></i> 仪表板</a>
                     </li>
                     <li>
                         <a href="ui-elements.html" class="active-menu"><i class="fa fa-desktop"></i> 微博详情</a>
