--- a/src/main/webapp/table.html
+++ b/src/main/webapp/table.html
@@ -34,7 +34,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><strong><i class="icon fa fa-plane"></i> BRILLIANT</strong></a>
+            <a class="navbar-brand" href="main.html"><strong><i class="icon fa fa-plane"></i> BRILLIANT</strong></a>
             <div id="sideNav" href="">
                 <i class="fa fa-bars icon"></i>
             </div>
@@ -259,7 +259,7 @@
             <ul class="nav" id="main-menu">
 
                 <li>
-                    <a href="index.html"><i class="fa fa-dashboard"></i> 仪表板</a>
+                    <a href="main.html"><i class="fa fa-dashboard"></i> 仪表板</a>
                 </li>
                 <li>
                     <a href="table.html" class="active-menu"><i class="fa fa-table"></i> 微博详情</a>
