Fix the login issue.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,12 +27,12 @@
         <h2 class="form-signin-heading">请登录：</h2>
         <div id="showinfo"></div>
 
-        <input type="text" id="name" class="form-control" placeholder="User number" name="inputEmail" required
+        <input type="text" id="username" class="form-control" placeholder="User number" name="inputEmail" required
                autofocus>
-        <input type="password" id="key" class="form-control" placeholder="Password" name="inputPassword"
+        <input type="password" id="password" class="form-control" placeholder="Password" name="inputPassword"
                required>
 
-        <input class="btn btn-lg btn-primary btn-block" type="button" id="btn" value="登录"/>
+        <button class="btn btn-lg btn-primary btn-block" id="submit">登录</button>
     </form>
 
 </div> <!-- /container -->
