--- a/src/main/webapp/table.html
+++ b/src/main/webapp/table.html
@@ -336,7 +336,7 @@
                     <!-- Advanced Tables -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Advanced Tables
+                            微博详情表
                         </div>
                         <div class="panel-body">
                             <div class="table-responsive">
