--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,13 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
     <title>Signin</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <link href="css/signin.css" rel="stylesheet">
-    <script src="js/ie-emulation-modes-warning.js"></script>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/signin.css" rel="stylesheet">
     <script src="/static/js/jquery.min.js"></script>
     <script src='/dwr/engine.js'></script>
     <script src='/dwr/interface/AdminManager.js'></script>
