--- a/src/main/webapp/table.html
+++ b/src/main/webapp/table.html
@@ -338,6 +338,9 @@
                         <div class="panel-heading">
                             微博详情表
                         </div>
+                        <div class="panel-heading">
+                            起止时间：<input type="text" id="start"  placeholder="年-月-日">-<input type="text" id="end"  placeholder="年-月-日">  <button  class="btn" data-toggle="button" id="search">查询</button>
+                        </div>
                         <div class="panel-body">
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered table-hover" id="dataTables-example">
