Redirect to login page if admin session is false or empty.

--- a/src/main/webapp/table.html
+++ b/src/main/webapp/table.html
@@ -6,14 +6,14 @@
     <meta content="" name="description"/>
     <meta content="webthemez" name="author"/>
     <title>Bootstrap Admin html Template</title>
-    <script src='/dwr/engine.js'></script>
-    <script src='/dwr/interface/UserManager.js'></script>
-    <script src='/dwr/interface/WeiboManager.js'></script>
+    <script src="/dwr/engine.js"></script>
+    <script src="/dwr/interface/AdminManager.js"></script>
+    <script src="/dwr/interface/WeiboManager.js"></script>
     <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/tools.js"></script>
     <script src="/static/js/mengular.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/jquery.metisMenu.js"></script>
-    <script src="/static/js/tools.js"></script>
     <script src="/static/js/index1.js"></script>
     <script src="/static/js/weibo1.js"></script>
     <link href="/static/css/index.css" rel="stylesheet">
