--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,28 +13,25 @@
     <script src="/static/js/jquery.min.js"></script>
     <script src='/dwr/engine.js'></script>
     <script src='/dwr/interface/AdminManager.js'></script>
+    <script src="/static/js/tools.js"></script>
     <script src="/static/js/login.js"></script>
 </head>
 
 <body>
 
 <div class="container">
-    <form class="form-signin" action="" method="post">
-        <h2 class="form-signin-heading">请登录：</h2>
-        <div id="showinfo"></div>
 
-        <input type="text" id="username" class="form-control" placeholder="User number" name="inputEmail" required
-               autofocus>
-        <input type="password" id="password" class="form-control" placeholder="Password" name="inputPassword"
-               required>
+    <h2 class="form-signin-heading">请登录：</h2>
+    <div id="showinfo"></div>
 
-        <button class="btn btn-lg btn-primary btn-block" id="submit">登录</button>
-    </form>
+    <input type="text" id="username" class="form-control" placeholder="User number" name="inputEmail" required
+           autofocus>
+    <input type="password" id="password" class="form-control" placeholder="Password" name="inputPassword"
+           required>
 
-</div> <!-- /container -->
+    <button class="btn btn-lg btn-primary btn-block" id="submit">登录</button>
 
 
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="js/ie10-viewport-bug-workaround.js"></script>
+</div>
 </body>
 </html>
