modified some  bug

--- a/src/main/webapp/table.html
+++ b/src/main/webapp/table.html
@@ -6,9 +6,9 @@
     <meta content="" name="description"/>
     <meta content="webthemez" name="author"/>
     <title>Bootstrap Admin html Template</title>
-    <script src="/dwr/engine.js"></script>
-    <script src="/dwr/interface/AdminManager.js"></script>
-    <script src="/dwr/interface/WeiboManager.js"></script>
+    <script src="dwr/engine.js"></script>
+    <script src="dwr/interface/AdminManager.js"></script>
+    <script src="dwr/interface/WeiboManager.js"></script>
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/tools.js"></script>
     <script src="/static/js/mengular.js"></script>
