--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,8 +11,8 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/signin.css" rel="stylesheet">
     <script src="/static/js/jquery.min.js"></script>
-    <script src='/dwr/engine.js'></script>
-    <script src='/dwr/interface/AdminManager.js'></script>
+    <script src='dwr/engine.js'></script>
+    <script src='dwr/interface/AdminManager.js'></script>
     <script src="/static/js/tools.js"></script>
     <script src="/static/js/login.js"></script>
 </head>
