modified some table bug

--- a/src/main/webapp/table.html
+++ b/src/main/webapp/table.html
@@ -11,13 +11,13 @@
     <script src="dwr/interface/WeiboManager.js"></script>
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/tools.js"></script>
-    <script src="/static/js/mengular.js"></script>
+    <script src="static/js/mengular.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/jquery.metisMenu.js"></script>
+    <script src="static/js/jquery.metisMenu.js"></script>
     <script src="/static/js/index1.js"></script>
-    <script src="/static/js/weibo1.js"></script>
+    <script src="static/js/weibo1.js"></script>
     <link href="/static/css/index.css" rel="stylesheet">
-    <link href="/static/css/mengular.css" rel="stylesheet">
+    <link href="static/css/mengular.css" rel="stylesheet">
     <link href="static/css/bootstrap.css" rel="stylesheet"/>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="static/css/custom-styles.css" rel="stylesheet"/>
