modified some page bug

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -18,12 +18,12 @@
     <!-- Google Fonts-->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="static/js/Lightweight-Chart/cssCharts.css">
-    <script src="/static/js/jquery.min.js"></script>
+    <script src="static/js/jquery.min.js"></script>
     <script type='text/javascript' src='dwr/engine.js'></script>
     <script type='text/javascript' src='dwr/interface/WeiboManager.js'></script>
-    <script src="/static/js/vue.min.js"></script>
-    <script src="/static/js/tools.js"></script>
-    <link href="/static/css/index.css" rel="stylesheet" type="text/css">
+    <script src="static/js/vue.min.js"></script>
+    <script src="static/js/tools.js"></script>
+    <link href="static/css/index.css" rel="stylesheet" type="text/css">
 
 </head>
 
